navbar structure created for html

--- a/home.html
+++ b/home.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./scss/main.css"/>
     <title>Home Page</title>
 </head>
+<header>
+    <div class="navbar-container">
+        <div class="navbar">
+            <div class="left-side">
+                <img src="./assets/icons/logo.svg"/>
+                <img src="./assets/icons/nftmarketplace.svg"/>
+            </div>
+            <div class="right-side">
+                <a href="">Marketplace</a>
+                <a href="">Rankings</a>
+                <a href="" class="login">Login</a>
+                <a href="" class="signup"><img src="./assets/icons/user.svg"/> Sign Up</a>
+            </div>
+        </div>
+    </div>
+</header>
 <body>
     
 </body>
