created hero-section structure for html

--- a/home.html
+++ b/home.html
@@ -19,11 +19,38 @@
                 <a href="">Rankings</a>
                 <a href="" class="login">Login</a>
                 <a href="" class="signup"><img src="./assets/icons/user.svg"/> Sign Up</a>
+                <img src="./assets/icons/burger.svg" class="sidebar-icon"/>
             </div>
         </div>
     </div>
 </header>
 <body>
+    <div class="hero-section">
+        <div class="hero-container">
+            <div class="left">
+                <h1>Discover digital art & Collect NFTs</h1>
+                <p>NFT marketplace UI created with Anima for Figma. Collect, buy and sell art from more than 20k NFT artists.</p>
+                <button class="get-started"><img src="./assets/icons/rocket.svg"/>Get Started</button>
+                <div class="info-tags">
+                    <div class="sale">
+                        <h3>240k+ </h3>
+                        <p>Total Sale</p>
+                    </div>
+                    <div class="auctions">
+                        <h3>100k+ </h3>
+                        <p>Auctions</p>
+                    </div>
+                    <div class="artists">
+                        <h3>240k+ </h3>
+                        <p>Artists</p>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <img src="./assets/images/animated-img.gif"/>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
