--- a/home.html
+++ b/home.html
@@ -1,56 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/main.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./scss/main.css" />
     <title>Home Page</title>
-</head>
-<header>
+  </head>
+  <header>
     <div class="navbar-container">
-        <div class="navbar">
-            <div class="left-side">
-                <img src="./assets/icons/logo.svg"/>
-                <img src="./assets/icons/nftmarketplace.svg"/>
-            </div>
-            <div class="right-side">
-                <a href="">Marketplace</a>
-                <a href="">Rankings</a>
-                <a href="" class="login">Login</a>
-                <a href="" class="signup"><img src="./assets/icons/user.svg"/> Sign Up</a>
-                <img src="./assets/icons/burger.svg" class="sidebar-icon"/>
-            </div>
+      <div class="navbar">
+        <div class="left-side">
+          <img src="./assets/icons/logo.svg" />
+          <img src="./assets/icons/nftmarketplace.svg" />
         </div>
+        <div class="right-side">
+          <a href="">Marketplace</a>
+          <a href="">Rankings</a>
+          <a href="" class="login">Login</a>
+          <a href="" class="signup"
+            ><img src="./assets/icons/user.svg" /> Sign Up</a
+          >
+          <img src="./assets/icons/burger.svg" class="sidebar-icon" />
+        </div>
+      </div>
     </div>
-</header>
-<body>
+  </header>
+  <body>
     <div class="hero-section">
-        <div class="hero-container">
-            <div class="left">
-                <h1>Discover digital art & Collect NFTs</h1>
-                <p>NFT marketplace UI created with Anima for Figma. Collect, buy and sell art from more than 20k NFT artists.</p>
-                <button class="get-started"><img src="./assets/icons/rocket.svg"/>Get Started</button>
-                <div class="info-tags">
-                    <div class="sale">
-                        <h3>240k+ </h3>
-                        <p>Total Sale</p>
-                    </div>
-                    <div class="auctions">
-                        <h3>100k+ </h3>
-                        <p>Auctions</p>
-                    </div>
-                    <div class="artists">
-                        <h3>240k+ </h3>
-                        <p>Artists</p>
+      <div class="hero-container">
+        <div class="left">
+          <h1>Discover digital art & Collect NFTs</h1>
+          <p>
+            NFT marketplace UI created with Anima for Figma. Collect, buy and
+            sell art from more than 20k NFT artists.
+          </p>
+          <button class="get-started">
+            <img src="./assets/icons/rocket.svg" />Get Started
+          </button>
+          <div class="info-tags">
+            <div class="sale">
+              <h3>240k+</h3>
+              <p>Total Sale</p>
+            </div>
+            <div class="auctions">
+              <h3>100k+</h3>
+              <p>Auctions</p>
+            </div>
+            <div class="artists">
+              <h3>240k+</h3>
+              <p>Artists</p>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <img src="./assets/images/animated-img.gif" />
+        </div>
+      </div>
+    </div>
+    <div class="trending">
+      <div class="trending-container">
+        <div class="headline">
+          <h2>Trending Collection</h2>
+          <p>Checkout our weekly updated trending collection.</p>
+        </div>
+        <div class="card-collection">
+            <div class="card">
+                <img src="./assets/images/dog.png"/>
+                <div class="small-imgs">
+                 <img src="./assets/images/bear.png"/>
+                 <img src="./assets/images/cat.png"/>
+                 <button class="more">
+                    1025+
+                 </button>
+                </div>
+                <div class="artist-info">
+                    <h4>DSGN Animals</h4>
+                    <div class="account-name">
+                        <img src="./assets/images/avatar-cat.png"/>
+                        <p>MrFox</p>
                     </div>
                 </div>
             </div>
-            <div class="right">
-                <img src="./assets/images/animated-img.gif"/>
+            <div class="card">
+                <img src="./assets/images/mushroom-main.png"/>
+                <div class="small-imgs">
+                 <img src="./assets/images/mushroom-second.png"/>
+                 <img src="./assets/images/mushroom-third.png"/>
+                 <button class="more">
+                    1025+
+                 </button>
+                </div>
+                <div class="artist-info">
+                    <h4>Magic Mushrooms</h4>
+                    <div class="account-name">
+                        <img src="./assets/images/avatar-boy.png"/>
+                        <p>Shroomie</p>
+                    </div>
+                </div>
             </div>
+            <div class="card">
+                <img src="./assets/images/robot-main.png"/>
+                <div class="small-imgs">
+                 <img src="./assets/images/robot-second.png"/>
+                 <img src="./assets/images/robot-third.png"/>
+                 <button class="more">
+                    1025+
+                 </button>
+                </div>
+                <div class="artist-info">
+                    <h4>Disco Machines</h4>
+                    <div class="account-name">
+                        <img src="./assets/images/avatar-cat.png"/>
+                        <p>BeKind2Robots</p>
+                    </div>
+                </div>
+            </div>
+            
         </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
