--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script defer src="../common/constants.js"></script>
     <script defer src="../backend/server/fake-data/index.js"></script>
+    <script defer src="./../common/subscribtion.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script defer src="../common/authorize.js"></script>
     <script defer src="../common/login.js"></script>
@@ -22,7 +23,7 @@
         </div>
         <div class="right-side">
           <a href="">Marketplace</a>
-          <a href="">Rankings</a>
+          <a href="./ranking/ranking.html">Rankings</a>
           <a href="./login.html" class="login">Login</a>
           <a href="./signup.html" class="signup"
             ><img src="../assets/icons/user.svg" /> Sign Up</a
