--- a/pages/signup.html
+++ b/pages/signup.html
@@ -9,6 +9,7 @@
     <script defer src="../common/constants.js"></script>
     <script defer src="../backend/server/fake-data/index.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script defer src="./../common/subscribtion.js"></script>
     <script defer src="../common/authorize.js"></script>
     <title>Create Account</title>
   </head>
@@ -21,7 +22,7 @@
         </div>
         <div class="right-side">
           <a href="">Marketplace</a>
-          <a href="">Rankings</a>
+          <a href="./ranking/ranking.html">Rankings</a>
           <a href="./login.html" class="login">Login</a>
           <a href="./signup.html" class="signup"
             ><img src="../assets/icons/user.svg" /> Sign Up</a
