added subhead section and searchinput with full responsive design

--- a/pages/artist-page/artist-page.html
+++ b/pages/artist-page/artist-page.html
@@ -22,7 +22,7 @@
           <a href="../../home.html">NFT Marketplace</a>
         </div>
         <div class="right-side">
-          <a href="">Marketplace</a>
+          <a href="../../pages/marketplace/marketplace.html">Marketplace</a>
           <a href="../ranking/ranking.html">Rankings</a>
           <a href="../login.html" class="login">Login</a>
           <a href="../signup.html" class="signup"
