--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <script defer src="./common/constants.js"></script>
   <script defer src="./pages/home/home.js"></script>
-  <script defer src="./common/subscribtion.js"></script>
+
    <script defer src="./backend/server/fake-data/index.js"></script>
     <link rel="stylesheet" href="./scss/main.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -22,7 +22,7 @@
           <a href="./home.html">NFT Marketplace</a>
         </div>
         <div class="right-side">
-          <a href="">Marketplace</a>
+          <a href="./pages/marketplace/marketplace.html">Marketplace</a>
           <a href="./pages/ranking/ranking.html">Rankings</a>
           <a href="./pages/login.html" class="login">Login</a>
           <a href="./pages/signup.html" class="signup"
