added link to rankings page

--- a/pages/marketplace/marketplace.html
+++ b/pages/marketplace/marketplace.html
@@ -24,7 +24,7 @@
             </div>
             <div class="right-side">
               <a href="../../pages/marketplace/marketplace.html">Marketplace</a>
-              <a href="">Rankings</a>
+              <a href="../ranking/ranking.html">Rankings</a>
               <a href="../login.html" class="login">Login</a>
               <a href="../signup.html" class="signup"
                 ><img src="../../assets/icons/user.svg" /> Sign Up</a
