--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <script defer src="./common/constants.js"></script>
   <script defer src="./pages/home/home.js"></script>
+  <script defer src="./common/subscribtion.js"></script>
 
-   <script defer src="./backend/server/fake-data/index.js"></script>
     <link rel="stylesheet" href="./scss/main.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
