added add to favorites page with functionality to store it on local storage

--- a/client/pages/artist-page/artist-page.html
+++ b/client/pages/artist-page/artist-page.html
@@ -27,6 +27,9 @@
           <a href="../../home.html">NFT Marketplace</a>
         </div>
         <div class="right-side">
+          <a href="../../pages/favorites/favorites.html" class="favorite"
+            >Favorites</a
+          >
           <a href="../../pages/marketplace/marketplace.html">Marketplace</a>
           <a href="../ranking/ranking.html">Rankings</a>
           <a href="../login.html" class="login">Login</a>
@@ -64,13 +67,13 @@
               <p>NFTs sold</p>
             </div>
             <div class="followers">
-              <h5>3000k+</h5>
+              <h5></h5>
               <p>Followers</p>
             </div>
           </div>
           <div class="bio">
             <p class="bio-head">Bio</p>
-            <p class="artist-bio">The internet's friendliest designer kid.</p>
+            <p class="artist-bio"></p>
           </div>
           <div class="link">
             <p>Link</p>
