--- a/client/pages/ranking/ranking.html
+++ b/client/pages/ranking/ranking.html
@@ -20,6 +20,9 @@
           <a href="../../home.html">NFT Marketplace</a>
         </div>
         <div class="right-side">
+          <a href="../../pages/favorites/favorites.html" class="favorite"
+            >Favorites</a
+          >
           <a href="../../pages/marketplace/marketplace.html">Marketplace</a>
           <a href="">Rankings</a>
           <a href="../login.html" class="login">Login</a>
