--- a/client/home.html
+++ b/client/home.html
@@ -7,6 +7,7 @@
     <script defer src="./common/constants.js"></script>
     <script defer src="./pages/home/home.js"></script>
     <script defer src="./common/subscribtion.js"></script>
+    <script defer src="./common/sidebar.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -42,6 +43,17 @@
             ><img src="./assets/icons/user.svg" /> Sign Up</a
           >
           <img src="./assets/icons/burger.svg" class="sidebar-icon" />
+        </div>
+        <div class="sidebar">
+          <a href="./pages/favorites/favorites.html" class="favorite"
+            >Favorites</a
+          >
+          <a href="./pages/marketplace/marketplace.html">Marketplace</a>
+          <a href="./pages/ranking/ranking.html">Rankings</a>
+          <a href="./pages/login.html" class="login">Login</a>
+          <a href="./pages/signup.html" class="signup"
+            ><img src="./assets/icons/user.svg" /> Sign Up</a
+          >
         </div>
       </div>
     </div>
