--- a/client/pages/artist-page/artist-page.html
+++ b/client/pages/artist-page/artist-page.html
@@ -17,6 +17,7 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/toastify-js"
     ></script>
+    <script defer src="../../common/sidebar.js"></script>
     <title>Artist Page</title>
   </head>
   <header>
@@ -37,6 +38,17 @@
             ><img src="../../assets/icons/user.svg" /> Sign Up</a
           >
           <img src="../../assets/icons/burger.svg" class="sidebar-icon" />
+        </div>
+        <div class="sidebar">
+          <a href="./pages/favorites/favorites.html" class="favorite"
+            >Favorites</a
+          >
+          <a href="./pages/marketplace/marketplace.html">Marketplace</a>
+          <a href="./pages/ranking/ranking.html">Rankings</a>
+          <a href="./pages/login.html" class="login">Login</a>
+          <a href="./pages/signup.html" class="signup"
+            ><img src="./assets/icons/user.svg" /> Sign Up</a
+          >
         </div>
       </div>
     </div>
