--- a/client/pages/favorites/favorites.html
+++ b/client/pages/favorites/favorites.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favorites</title>
     <link rel="stylesheet" href="../../scss/main.css" />
+    <script defer src="../../common/sidebar.js"></script>
     <script defer src="./favorites.js"></script>
     <script defer src="../../common/constants.js"></script>
   </head>
@@ -28,6 +29,17 @@
               ><img src="../../assets/icons/user.svg" /> Sign Up</a
             >
             <img src="../../assets/icons/burger.svg" class="sidebar-icon" />
+          </div>
+          <div class="sidebar">
+            <a href="./pages/favorites/favorites.html" class="favorite"
+              >Favorites</a
+            >
+            <a href="./pages/marketplace/marketplace.html">Marketplace</a>
+            <a href="./pages/ranking/ranking.html">Rankings</a>
+            <a href="./pages/login.html" class="login">Login</a>
+            <a href="./pages/signup.html" class="signup"
+              ><img src="./assets/icons/user.svg" /> Sign Up</a
+            >
           </div>
         </div>
       </div>
