--- a/client/pages/signup.html
+++ b/client/pages/signup.html
@@ -10,6 +10,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
+    <script defer src="../common/sidebar.js"></script>
     <script defer src="../common/constants.js"></script>
     <script
       type="text/javascript"
@@ -34,6 +35,17 @@
             ><img src="../assets/icons/user.svg" /> Sign Up</a
           >
           <img src="../assets/icons/burger.svg" class="sidebar-icon" />
+        </div>
+        <div class="sidebar">
+          <a href="./pages/favorites/favorites.html" class="favorite"
+            >Favorites</a
+          >
+          <a href="./pages/marketplace/marketplace.html">Marketplace</a>
+          <a href="./pages/ranking/ranking.html">Rankings</a>
+          <a href="./pages/login.html" class="login">Login</a>
+          <a href="./pages/signup.html" class="signup"
+            ><img src="./assets/icons/user.svg" /> Sign Up</a
+          >
         </div>
       </div>
     </div>
