modified a tags in all htmls

--- a/client/pages/ranking/ranking.html
+++ b/client/pages/ranking/ranking.html
@@ -33,14 +33,14 @@
           <img src="../../assets/icons/burger.svg" class="sidebar-icon" />
         </div>
         <div class="sidebar">
-          <a href="./pages/favorites/favorites.html" class="favorite"
+          <a href="../../pages/favorites/favorites.html" class="favorite"
             >Favorites</a
           >
-          <a href="./pages/marketplace/marketplace.html">Marketplace</a>
-          <a href="./pages/ranking/ranking.html">Rankings</a>
-          <a href="./pages/login.html" class="login">Login</a>
-          <a href="./pages/signup.html" class="signup"
-            ><img src="./assets/icons/user.svg" /> Sign Up</a
+          <a href="../../pages/marketplace/marketplace.html">Marketplace</a>
+          <a href="">Rankings</a>
+          <a href="../login.html" class="login">Login</a>
+          <a href="../signup.html" class="signup"
+            ><img src="../../assets/icons/user.svg" /> Sign Up</a
           >
         </div>
       </div>
